Added work done from the class.

--- a/client/templates/layout/default.html
+++ b/client/templates/layout/default.html
@@ -19,7 +19,9 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Home</a></li>
+                    <li class=""><a href="{{pathFor 'home'}}">Home</a></li>
+                    <li class=""><a href="{{pathFor 'wish'}}">Wish List</a></li>
+                    <li class=""><a href="{{pathFor 'newWish'}}">Make a Wish</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#">Help</a></li>
