Change menu/template names.

--- a/client/templates/layout/nav_default.html
+++ b/client/templates/layout/nav_default.html
@@ -13,8 +13,8 @@
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li class=""><a href="{{pathFor 'home'}}">Home</a></li>
-                    <li class=""><a href="{{pathFor 'wish'}}">Wish List</a></li>
-                    <li class=""><a href="{{pathFor 'newWish'}}">Make a Wish</a></li>
+                    <li class=""><a href="{{pathFor 'posts'}}">Posts</a></li>
+                    <li class=""><a href="{{pathFor 'addPost'}}">Add</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#">Help</a></li>
