--- a/client/stylesheets/default.less
+++ b/client/stylesheets/default.less
@@ -1,3 +1,8 @@
 .container.page {
     margin-top: 72px;
+
+    .jumbotron.post {
+        padding-top: 24px;
+        padding-bottom: 24px;
+    }
 }
