--- a/client/templates/post/add_post_page.html
+++ b/client/templates/post/add_post_page.html
@@ -1,3 +1,3 @@
 <template name="addPostPage">
-    {{> quickForm collection="List" id="addPostForm" type="insert"}}
+    {{> quickForm collection="List" id="addPostForm" type="insert" buttonContent="Post"}}
 </template>
