--- a/client/templates/post/list_post_page.html
+++ b/client/templates/post/list_post_page.html
@@ -1,6 +1,6 @@
 <template name="listPostPage">
     <div class="jumbotron">
-        <h2>Posts Page</h2>
+        <h2>Post List</h2>
     </div>
 
     {{#each post in list}}
