--- a/client/templates/post/list_post_page.html
+++ b/client/templates/post/list_post_page.html
@@ -3,11 +3,15 @@
         <h2>Post List</h2>
     </div>
 
-    {{#each post in list}}
-        <div class="jumbotron post">
-            <a href="{{pathFor 'post' id=post._id}}"><h3>{{post.title}}</h3></a>
-        </div>
+    {{#if Template.subscriptionsReady}}
+        {{#each post in list}}
+            <div class="jumbotron post">
+                <a href="{{pathFor 'post' id=post._id}}"><h3>{{post.title}}</h3></a>
+            </div>
+        {{else}}
+            No data
+        {{/each}}
     {{else}}
-        No data
-    {{/each}}
+        {{> spinner}}
+    {{/if}}
 </template>
