Show post item with subscription.

--- a/client/stylesheets/default.less
+++ b/client/stylesheets/default.less
@@ -4,6 +4,10 @@
     .jumbotron.post {
         padding-top: 24px;
         padding-bottom: 24px;
+
+        .markdown p {
+            font-size: medium;
+        }
     }
 
     .markdownControls {
