--- a/client/templates/post/add_post_page.html
+++ b/client/templates/post/add_post_page.html
@@ -1,7 +1,9 @@
 <template name="addPostPage">
-    <div class="jumbotron">
-        <h2>New Post</h2>
-    </div>
+    {{# loggedInOnly}}
+        <div class="jumbotron">
+            <h2>New Post</h2>
+        </div>
 
-    {{> quickForm collection="List" id="addPostForm" type="insert" buttonContent="Post"}}
+        {{> quickForm collection="List" id="addPostForm" type="insert" buttonContent="Post"}}
+    {{/loggedInOnly}}
 </template>
