--- a/client/templates/post/add_post_page.html
+++ b/client/templates/post/add_post_page.html
@@ -1,6 +1,6 @@
 <template name="addPostPage">
     {{# loggedInOnly}}
-        <div class="jumbotron">
+        <div class="jumbotron slim">
             <h2>New Post</h2>
         </div>
 
