--- a/client/templates/post/post_page.html
+++ b/client/templates/post/post_page.html
@@ -4,6 +4,7 @@
             <h3>{{post.title}}</h3>
             <hr/>
             <div class="markdown">{{{renderMarkdown post.description}}}</div>
+            <div>{{#each post.tags}}<span class="label label-primary">{{this}}</span>&nbsp;{{/each}}</div>
         </div>
     {{else}}
         {{> spinner}}
