--- a/client/stylesheets/default.less
+++ b/client/stylesheets/default.less
@@ -2,7 +2,7 @@
     margin-top: 72px;
 
     .jumbotron.post {
-        padding-top: 24px;
+        padding-top: 12px;
         padding-bottom: 24px;
 
         .markdown p {
@@ -13,6 +13,22 @@
     .jumbotron.slim {
         padding-top: 12px;
         padding-bottom: 12px;
+        margin-bottom: 12px;
+    }
+
+    .jumbotron .head-and-button {
+        h3 {
+            display: inline-block;
+        }
+        div {
+            display: inline-block;
+            position: relative;
+            a {
+                position: absolute;
+                top: 10px;
+                right: 0px;
+            }
+        }
     }
 
     .markdownControls {
