--- a/client/templates/post/post_page.html
+++ b/client/templates/post/post_page.html
@@ -1,7 +1,12 @@
 <template name="postPage">
     {{#if Template.subscriptionsReady}}
         <div class="jumbotron post">
-            <h3>{{post.title}}</h3>
+            <div class="head-and-button">
+                <h3>{{post.title}}</h3>
+                <div class="pull-right">
+                    <a class="btn btn-primary" href="{{pathFor 'editPost' id=post._id }}">Edit</a>
+                </div>
+            </div>
             <hr/>
             <div class="markdown">{{{renderMarkdown post.description}}}</div>
             <div>{{#each post.tags}}<span class="label label-primary">{{this}}</span>&nbsp;{{/each}}</div>
