Show edit button only to document owner.

--- a/client/templates/post/post_page.html
+++ b/client/templates/post/post_page.html
@@ -3,9 +3,11 @@
         <div class="jumbotron post">
             <div class="head-and-button">
                 <h3>{{post.title}}</h3>
-                <div class="pull-right">
-                    <a class="btn btn-primary" href="{{pathFor 'editPost' id=post._id }}">Edit</a>
-                </div>
+                {{#if ownDocument}}
+                    <div class="pull-right">
+                        <a class="btn btn-primary" href="{{pathFor 'editPost' id=post._id }}">Edit</a>
+                    </div>
+                {{/if}}
             </div>
             <hr/>
             <div class="markdown">{{{renderMarkdown post.description}}}</div>
