Protect editPost page from non-owner, show warning message. Refactor templates.

--- a/client/templates/layout/logged_in_only.html
+++ b/client/templates/layout/logged_in_only.html
@@ -5,8 +5,9 @@
         {{#if canShow}}
             {{> UI.contentBlock }}
         {{else}}
-            <p>You are not authorized to view this page.</p>
-            <p>Please login to view this page</p>
+            <p class="center-block text-center">
+                You are not authorized to view this page.<br/>
+                Please login to view this page</p>
         {{/if}}
     {{/if}}
 </template>
