Mod input style, remove page header: new/edit, hide markdown preview.

--- a/client/templates/post/add_post_page.html
+++ b/client/templates/post/add_post_page.html
@@ -1,8 +1,5 @@
 <template name="addPostPage">
     {{# loggedInOnly}}
-        <div class="jumbotron slim">
-            <h3>New Post</h3>
-        </div>
-        {{> quickForm collection="List" id="addPostForm" type="insert" buttonContent="Post"}}
+        {{> quickForm collection="List" id="addPostForm" type="insert" buttonContent="Create post"}}
     {{/loggedInOnly}}
 </template>
