--- a/client/stylesheets/default.less
+++ b/client/stylesheets/default.less
@@ -31,8 +31,29 @@
         }
     }
 
-    .markdownControls {
+    form {
+        input[name="title"] {
+            //background-color: #4E5D6C;
+            //color: #EBEBEB;
+            font-size: 26px;
+            height: auto;
+
+            padding-top: 12px;
+            padding-bottom: 12px;
+            margin-bottom: 12px;
+        }
+        textarea[name="description"] {
+            //background-color: #4E5D6C;
+            //color: #EBEBEB;
+        }
+    }
+
+    .markdownControls, .markdownPreview {
         display: none;
+    }
+
+    .markdownContent {
+        width: 100%;
     }
 
     .selectize-input {
@@ -44,11 +65,11 @@
     }
     .selectize-input > .item {
         border-radius: 0;
-        background-color: rgb(43, 62, 80);
+        background-color: #4E5D6C;
         color: white;
         padding: 2px 5px;
         &.active {
-            background-color: #DF691A;
+            background-color: #2B3E50;
         }
     }
 }
