--- a/client/templates/post/list_post_page.html
+++ b/client/templates/post/list_post_page.html
@@ -7,6 +7,7 @@
         {{#each post in list}}
             <div class="jumbotron post">
                 <a href="{{pathFor 'post' id=post._id}}"><h3>{{post.title}}</h3></a>
+                <div class="markdown">{{{renderMarkdown post.excerpt}}}</div>
             </div>
         {{else}}
             No data
