Fix image width, nav-bar font size.

--- a/client/stylesheets/default.less
+++ b/client/stylesheets/default.less
@@ -1,3 +1,7 @@
+.navbar-nav > li > a {
+    font-size: medium;
+}
+
 .container.page {
     margin-top: 72px;
 
@@ -7,6 +11,9 @@
 
         .markdown p {
             font-size: medium;
+            img {
+                max-width: 100%;
+            }
         }
     }
 
