--- a/client/templates/post/list_post_page.html
+++ b/client/templates/post/list_post_page.html
@@ -1,9 +1,8 @@
 <template name="listPostPage">
-    <div class="jumbotron">
-        <h2>Post List</h2>
-    </div>
-
-    {{#if Template.subscriptionsReady}}
+    {{#waitingFor status=Template.subscriptionsReady}}
+        <div class="jumbotron">
+            <h2>Post List</h2>
+        </div>
         {{#each post in list}}
             <div class="jumbotron post">
                 <a href="{{pathFor 'post' id=post._id}}"><h3>{{post.title}}</h3></a>
@@ -12,7 +11,5 @@
         {{else}}
             No data
         {{/each}}
-    {{else}}
-        {{> spinner}}
-    {{/if}}
+    {{/waitingFor}}
 </template>
