--- a/client/templates/post/post_page.html
+++ b/client/templates/post/post_page.html
@@ -1,5 +1,5 @@
 <template name="postPage">
-    {{#if Template.subscriptionsReady}}
+    {{#waitingFor status=Template.subscriptionsReady}}
         <div class="jumbotron post">
             <div class="head-and-button">
                 <h3>{{post.title}}</h3>
@@ -14,7 +14,5 @@
             <hr/>
             <div>{{#each post.tags}}<span class="label label-primary">{{this}}</span>&nbsp;{{/each}}</div>
         </div>
-    {{else}}
-        {{> spinner}}
-    {{/if}}
+    {{/waitingFor}}
 </template>
