Added addComment form, adjust Comments schema.

--- a/client/templates/post/post_page.html
+++ b/client/templates/post/post_page.html
@@ -1,6 +1,9 @@
 <template name="postPage">
     {{#waitingFor status=Template.subscriptionsReady}}
         {{>showPost doc=post}}
-        {{>showComment doc=post}}
+        {{>showComments doc=post}}
+        {{#if currentUser}}
+            {{>addComment doc=post}}
+        {{/if}}
     {{/waitingFor}}
 </template>
