Show owner name from collection hook+module function.

--- a/client/stylesheets/default.less
+++ b/client/stylesheets/default.less
@@ -50,6 +50,14 @@
                 max-width: 100%;
             }
         }
+
+        .wrote-by {
+            color: #888;
+            font-size: medium;
+            &.small {
+                font-size: 80%;
+            }
+        }
     }
 
     form {
