--- a/client/templates/post/show_comments.html
+++ b/client/templates/post/show_comments.html
@@ -2,6 +2,7 @@
     {{#waitingFor status=Template.subscriptionsReady}}
         {{#each message in comments}}
             <div class="jumbotron slim">
+                <div class="small wrote-by">{{message.ownerName}}:</div>
                 <div class="markdown">{{{renderMarkdown message.description}}}</div>
             </div>
         {{else}}
