--- a/client/stylesheets/default.less
+++ b/client/stylesheets/default.less
@@ -111,4 +111,11 @@
             background-color: #2B3E50;
         }
     }
+
+    img.emoji {
+        height: 1em;
+        width: 1em;
+        margin: 0 .05em 0 .1em;
+        vertical-align: -0.1em;
+    }
 }
