Show markdown with emoji.

--- a/client/templates/post/list_post_page.html
+++ b/client/templates/post/list_post_page.html
@@ -9,7 +9,7 @@
                     <br><div class="wrote-by">{{#with post.ownerName}}by {{this}}{{/with}}
                         @ {{post.dateCreated}}</div>
                 </h3>
-                <div class="markdown">{{{renderMarkdown post.excerpt}}}</div>
+                <div class="markdown">{{{renderMarkdownEmoji post.excerpt}}}</div>
             </div>
         {{else}}
             No data
