--- a/client/templates/post/show_comments.html
+++ b/client/templates/post/show_comments.html
@@ -3,7 +3,7 @@
         {{#each message in comments}}
             <div class="jumbotron slim">
                 <div class="small wrote-by">{{message.ownerName}}:</div>
-                <div class="markdown">{{{renderMarkdown message.description}}}</div>
+                <div class="markdown">{{{renderMarkdownEmoji message.description}}}</div>
             </div>
         {{else}}
         {{/each}}
