--- a/client/templates/post/show_post.html
+++ b/client/templates/post/show_post.html
@@ -12,7 +12,7 @@
             {{/if}}
         </div>
         <hr/>
-        <div class="markdown">{{{renderMarkdown doc.description}}}</div>
+        <div class="markdown">{{{renderMarkdownEmoji doc.description}}}</div>
         <hr/>
         <div>{{#each doc.tags}}<span class="label label-primary">{{this}}</span>&nbsp;{{/each}}</div>
     </div>
