Move ownDocument() into global helper.

--- a/client/templates/layout/owner_only.html
+++ b/client/templates/layout/owner_only.html
@@ -1,5 +1,5 @@
 <template name="ownerOnly">
-    {{#if ownDocument}}
+    {{#if ownDocument doc}}
         {{> UI.contentBlock }}
     {{else}}
         <p class="center-block text-center">You are not authorized to view this page.</p>
