--- a/client/templates/post/edit_post_page.html
+++ b/client/templates/post/edit_post_page.html
@@ -8,7 +8,7 @@
                     {{> afQuickField name="tags" label="Edit tags" class="tags" selectizeOptions=tags}}
                     <div class="text-left">
                         <button type="submit" class="btn btn-primary">Save changes</button>
-                        <button type="cancel" class="btn btn-default">Cancel</button>
+                        <button type="cancel" class="btn btn-default btn-cancel">Cancel</button>
                     </div>
                 {{/autoForm}}
             {{/ownerOnly}}
