--- a/client/templates/post/show_post.html
+++ b/client/templates/post/show_post.html
@@ -1,5 +1,5 @@
 <template name="showPost">
-    <div class="jumbotron post">
+    <div class="jumbotron post {{doc.draftClass}}">
         <div class="head-and-button">
             <h3>{{doc.title}}
                 <br><div class="wrote-by">{{#with doc.ownerName}}by {{this}}{{/with}}
