--- a/client/stylesheets/default.less
+++ b/client/stylesheets/default.less
@@ -26,6 +26,10 @@
             //margin-bottom: 12px;
         }
 
+        &.draft {
+            background-color: black;
+        }
+
         p {
             font-size: medium;
         }
