--- a/client/templates/post/post_page.html
+++ b/client/templates/post/post_page.html
@@ -1,11 +1,13 @@
 <template name="postPage">
     {{#waitingFor status=Template.subscriptionsReady}}
-        {{>showPost doc=post}}
-        {{#unless post.is_draft}}
-            {{>showComments doc=post}}
-            {{#if currentUser}}
-                {{>addComment doc=post}}
-            {{/if}}
-        {{/unless}}
+        {{#nonDraftOnly doc=post}}
+            {{>showPost doc=post}}
+            {{#unless post.is_draft}}
+                {{>showComments doc=post}}
+                {{#if currentUser}}
+                    {{>addComment doc=post}}
+                {{/if}}
+            {{/unless}}
+        {{/nonDraftOnly}}
     {{/waitingFor}}
 </template>
