Added delete post logic.

--- a/client/templates/post/show_post.html
+++ b/client/templates/post/show_post.html
@@ -8,6 +8,7 @@
             {{#if ownDocument doc}}
                 <div class="pull-right">
                     <a class="btn btn-primary" href="{{pathFor 'editPost' id=doc._id }}">Edit</a>
+                    <a class="btn btn-danger btn-delete" href="#">Delete</a>
                 </div>
             {{/if}}
         </div>
