--- a/client/stylesheets/default.less
+++ b/client/stylesheets/default.less
@@ -42,9 +42,9 @@
                 display: inline-block;
                 position: relative;
                 a {
-                    position: absolute;
-                    top: 10px;
-                    right: 0px;
+                    //position: absolute;
+                    //top: 10px;
+                    //right: 0px;
                 }
             }
         }
