Do delete post with children if any, revised nonDraftOnly layout.

--- a/client/templates/layout/non_draft_only.html
+++ b/client/templates/layout/non_draft_only.html
@@ -2,6 +2,6 @@
     {{#if nonDraft doc}}
         {{> UI.contentBlock }}
     {{else}}
-        <p class="center-block text-center">This document is not ready to view yet.</p>
+        <p class="center-block text-center">Document has been removed or not ready yet.</p>
     {{/if}}
 </template>
